# ChangeLog for app-portage/elogv
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/elogv/ChangeLog,v 1.53 2009/02/27 23:59:18 fauli Exp $

  27 Feb 2009; Christian Faulhammer <fauli@gentoo.org> -elogv-0.7.2.ebuild:
  clean up

  26 Feb 2009; Raúl Porcel <armin76@gentoo.org> elogv-0.7.3.ebuild:
  x86 stable wrt #260036

  25 Feb 2009; Joseph Jezak <josejx@gentoo.org> elogv-0.7.3.ebuild:
  Marked ppc stable for bug #260036.

  24 Feb 2009; Thomas Anderson <gentoofan23@gentoo.org> elogv-0.7.3.ebuild:
  stable amd64, bug 260036

*elogv-0.7.3 (07 Dec 2008)

  07 Dec 2008; Zac Medico <zmedico@gentoo.org> +elogv-0.7.3.ebuild:
  Version bump. This fixes bugs #249536 and #236056.

  01 Dec 2008; Christian Faulhammer <fauli@gentoo.org> -elogv-0.7.1.ebuild:
  clean up

  30 Nov 2008; Tobias Scherbaum <dertobi123@gentoo.org> elogv-0.7.2.ebuild:
  ppc stable, bug #249352

  30 Nov 2008; Markus Meier <maekke@gentoo.org> elogv-0.7.2.ebuild:
  amd64/x86 stable, bug #249352

*elogv-0.7.2 (31 Oct 2008)

  31 Oct 2008; Christian Faulhammer <opfer@gentoo.org> +elogv-0.7.2.ebuild:
  version bump, fixes bug 242420

  31 Oct 2008; Christian Faulhammer <opfer@gentoo.org> -elogv-0.6.4.ebuild:
  clean up

  06 Aug 2008; Raúl Porcel <armin76@gentoo.org> elogv-0.7.1.ebuild:
  x86 stable wrt #233101

  30 Jul 2008; Thomas Anderson <gentoofan23@gentoo.org> elogv-0.7.1.ebuild:
  stable amd64, bug 233101

  27 Jul 2008; Stephanie Lockwood-Childs <wormo@gentoo.org>
  elogv-0.7.1.ebuild:
  stable on ppc (bug #233101)

*elogv-0.7.1 (30 Jun 2008)

  30 Jun 2008; Christian Faulhammer <opfer@gentoo.org> -elogv-0.7.ebuild,
  +elogv-0.7.1.ebuild:
  version bump and clean up

*elogv-0.7 (31 May 2008)

  31 May 2008; Christian Faulhammer <opfer@gentoo.org> +elogv-0.7.ebuild:
  version bump, fixes bug 224307:  localisations and some overall bug fixes

  28 Apr 2008; Christian Faulhammer <opfer@gentoo.org> -elogv-0.6.3.ebuild:
  clean up
