@@ -1,6 +1,8 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/elogv/elogv-0.7.3.ebuild,v 1.4 2009/02/26 15:13:37 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/elogv/elogv-0.7.3.ebuild,v 1.5 2009/03/07 19:50:52 betelgeuse Exp $
+
+EAPI="2"
 
 inherit distutils eutils
 
@@ -13,22 +15,11 @@ KEYWORDS="~alpha amd64 ppc ~sparc x86 ~x86-fbsd"
 IUSE=""
 
 DEPEND=""
-RDEPEND=""
-
-pkg_setup() {
-	if ! built_with_use dev-lang/python ncurses; then
-	   eerror
-	   eerror "\t ${PN} requires ncurses support on python"
-	   eerror "\t Please, compile python with use ncurses enabled then"
-	   eerror "\t remerge this package"
-	   eerror
-	   die "dev-lang/python must have ncurses use turned on"
-	fi
-}
+RDEPEND="dev-lang/python[ncurses]"
 
 src_install() {
 	distutils_src_install
-	dodoc README ChangeLog ChangeLog.old
+	dodoc README ChangeLog ChangeLog.old || die
 }
 
 pkg_postinst() {
