@@ -1,6 +1,8 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/esearch/esearch-0.7.1.ebuild,v 1.18 2008/12/31 03:23:15 darkside Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/esearch/esearch-0.7.1.ebuild,v 1.19 2009/03/07 19:54:57 betelgeuse Exp $
+
+EAPI="2"
 
 inherit eutils
 
@@ -13,18 +15,8 @@ SLOT="0"
 KEYWORDS="alpha ~amd64 arm hppa ia64 ~mips ppc ppc64 s390 sh sparc x86"
 IUSE="linguas_it"
 
-RDEPEND=">=dev-lang/python-2.2
+RDEPEND=">=dev-lang/python-2.2[readline]
 	>=sys-apps/portage-2.0.50"
-
-pkg_setup() {
-	if ! built_with_use dev-lang/python readline ; then
-		eerror "Python has to be build with 'readline' support!"
-		eerror "To do so: USE=\"readline\" emerge python"
-		eerror "Or, add \"readline\" to your USE string in"
-		eerror "/etc/make.conf"
-		die "Works only with python readline support"
-	fi
-}
 
 src_install() {
 	dodir /usr/bin/ /usr/sbin/
@@ -37,7 +29,7 @@ src_install() {
 	dosym /usr/lib/esearch/esync.py /usr/sbin/esync
 
 	doman en/{esearch,eupdatedb,esync}.1
-	dodoc ChangeLog "${FILESDIR}/eupdatedb.cron"
+	dodoc ChangeLog "${FILESDIR}/eupdatedb.cron" || die
 
 	if use linguas_it ; then
 		insinto /usr/share/man/it/man1
