@@ -1,6 +1,10 @@
 # ChangeLog for app-portage/esearch
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/esearch/ChangeLog,v 1.58 2009/03/07 19:50:51 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/esearch/ChangeLog,v 1.59 2009/03/07 19:54:57 betelgeuse Exp $
+
+  07 Mar 2009; Petteri Räty <betelgeuse@gentoo.org> esearch-0.7.1.ebuild,
+  esearch-0.7.1-r7.ebuild:
+  Migrate to EAPI 2.
 
   07 Mar 2009; Petteri Räty <betelgeuse@gentoo.org>
   -esearch-0.7.1-r6.ebuild:
