@@ -1,6 +1,9 @@
 # ChangeLog for app-portage/elogv
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/elogv/ChangeLog,v 1.53 2009/02/27 23:59:18 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/elogv/ChangeLog,v 1.54 2009/03/07 19:50:52 betelgeuse Exp $
+
+  07 Mar 2009; Petteri Räty <betelgeuse@gentoo.org> elogv-0.7.3.ebuild:
+  Migrate to EAPI 2.
 
   27 Feb 2009; Christian Faulhammer <fauli@gentoo.org> -elogv-0.7.2.ebuild:
   clean up
